--- a/index.html
+++ b/index.html
@@ -8,6 +8,40 @@
     <title>Document</title>
   </head>
   <body>
+    <div id="sidebar">
+      sidebar
+    </div>
+    <div id="container">
+      <p class="disclaimer">This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. <br>Sign up <em>now</em> to get started <br><br>You <em>know</em> you want to.</p>
+
+      <div class="form-container">
+        <h3>Let's do this!</h3>
+        <form action="/">
+            <div class="row">
+              <label for="fName">First Name</label>
+            <input type="text" id="fName">
+            <label for="lName">Last Name</label>
+            <input type="text" id="lName">
+            </div>
+            <div class="row">
+              <label for="email">Email</label>
+            <input type="email" id="email">
+            <label for="number">Phone Number</label>
+            <input type="tel" id="number">
+            </div>
+            <div class="row">
+              <label for="password">Password</label>
+            <input type="text" id="password">
+            <label for="confirmPass">Confirm Password</label>
+            <input type="text" id="confirmPass">
+            </div>
+            <div>
+              <button type="submit">Create Account</button>
+              <p>Already have an account? <a href="/">Log in</a></p>
+            </div>
+        </form>
+      </div>
+    </div>
     <script src="./script.js" charset="utf-8"></script>
   </body>
 </html>
