--- a/index.html
+++ b/index.html
@@ -18,26 +18,38 @@
         <h3>Let's do this!</h3>
         <form action="/">
             <div class="row">
-              <label for="fName">First Name</label>
-            <input type="text" id="fName">
-            <label for="lName">Last Name</label>
-            <input type="text" id="lName">
+              <div class="column">
+                <label for="fName">First Name</label>
+                <input type="text" id="fName">
+              </div>
+              <div class="column">
+                <label for="lName">Last Name</label>
+                <input type="text" id="lName">
+              </div>
             </div>
             <div class="row">
-              <label for="email">Email</label>
-            <input type="email" id="email">
-            <label for="number">Phone Number</label>
-            <input type="tel" id="number">
+              <div class="column">
+                <label for="email">Email</label>
+                <input type="email" id="email">
+              </div>
+              <div class="column">
+                <label for="number">Phone Number</label>
+                <input type="tel" id="number">
+              </div>
             </div>
             <div class="row">
-              <label for="password">Password</label>
-            <input type="text" id="password">
-            <label for="confirmPass">Confirm Password</label>
-            <input type="text" id="confirmPass">
+              <div class="column">
+                <label for="password">Password</label>
+                <input type="text" id="password">
+              </div>
+              <div class="column">
+                <label for="confirmPass">Confirm Password</label>
+                <input type="text" id="confirmPass">
+              </div>
             </div>
-            <div>
+            <div class="button-container">
               <button type="submit">Create Account</button>
-              <p>Already have an account? <a href="/">Log in</a></p>
+              <p >Already have an account? <a href="/" class="login-link">Log in</a></p>
             </div>
         </form>
       </div>
